<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/Password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="casual"
            android:text="CS427 Project App"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Login Details" />

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Login"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:text="Password"
                android:hint="User Name"/>

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/loginTextBox"
                android:layout_width="match_parent"
                android:layout_height="60dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <Button
                    android:id="@+id/LoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Sign In" />

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordTextBox"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:hint="Password"
                    android:password="true" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="90dp"
                    android:layout_weight="1" />

                <TextView
                    android:id="@+id/LoginErrorText"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:textColor="#F40909"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/SignUpButton"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:text="Sign Up" />

            </com.google.android.material.textfield.TextInputLayout>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>