<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="729dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/buttonLogOut"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="280dp"
            android:layout_marginTop="0dp"
            android:layout_marginRight="10dp"
            android:text="Logout" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00E8E0E0"
            android:fontFamily="casual"
            android:text="CS427 Project App"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="396dp"
            android:layout_height="wrap_content"
            android:text="List of Locations" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="395dp"
            android:layout_height="wrap_content" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="300dp">

            <LinearLayout
                android:id="@+id/locationsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="vertical">


                <!-- Dynamic location entries will be added here -->
            </LinearLayout>
        </ScrollView>


        <LinearLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonAddLocation"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:text="Add a location" />

            <Space
                android:layout_width="2dp"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/buttonRemoveLocation"
                android:layout_width="195dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginRight="10dp"
                android:text="Delete a location" />

        </LinearLayout>

        <Spinner
            android:id="@+id/locationSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:padding="10dp" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saveAddedLocationButton"
            android:visibility="gone" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>