<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:fontFamily="casual"
            android:text="CS427 Project App"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="Registration Details" />

        <TextView
            android:id="@+id/userIDText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="User ID"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userIDTextBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="User ID" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/usernameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Username"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/usernameTextBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Username" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/passwordText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Password"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordTextBox"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:hint="Password"
                android:password="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/themeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Theme"
            android:textSize="16sp" />

        <Spinner
            android:id="@+id/spinner2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/RegisterButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Register" />

        <Button
            android:id="@+id/BackButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="Back" />

        <TextView
            android:id="@+id/RegistrationErrorText"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:foregroundGravity="center"
            android:gravity="center"
            android:textColor="#F40909"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>

